Bugfixes & database update